[package]
name = "yenc"
version = "0.2.1"
authors = ["aswaving <a.swaving@gmail.com>"]
description = "Encodes and decodes using the yEnc encoding."
repository = "https://github.com/aswaving/yenc"
documentation = "https://docs.rs/yenc/0.2.1/yenc/"
categories = ["encoding"]
keywords = ["yenc", "encode", "decode"]
license = "MIT"
autobenches = false
edition = "2018"

[dependencies]

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3.0"
rand = "0.7.2"
lazy_static = "1.4.0"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false
