[package]
name = "yenc"
version = "0.2.2"
authors = ["aswaving <a.swaving@gmail.com>"]
description = "Encodes and decodes using the yEnc encoding."
repository = "https://github.com/aswaving/yenc"
documentation = "https://docs.rs/yenc/0.2.2/yenc/"
categories = ["encoding"]
keywords = ["yenc", "encode", "decode"]
license = "MIT OR Apache-2.0"
autobenches = false
edition = "2018"

[dependencies]
crc32fast = "1.2.1"

[dev-dependencies]
criterion = "0.3.4"
rand = "0.8.3"
lazy_static = "1.4.0"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true
