[package]
name = "yenc"
version = "0.3.0"
authors = ["aswaving <a.swaving@gmail.com>"]
description = "Encodes and decodes using the yEnc encoding."
repository = "https://github.com/aswaving/yenc"
documentation = "https://docs.rs/yenc/0.3.0/yenc/"
categories = ["encoding"]
keywords = ["yenc", "encode", "decode"]
license = "MIT OR Apache-2.0"
autobenches = false
edition = "2024"
readme = "README.md"
rust-version = "1.85.1"

[dependencies]
crc32fast = "1.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = { version = "0.9.2", features = ["small_rng"] }

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true
